--- a/template/view/default/header.html
+++ b/template/view/default/header.html
@@ -17,6 +17,7 @@
     <meta name="setAccent" content="{$theme.themeAccent}">
     <meta name="setLayout" content="{$theme.themeLayout}">
 
+    <link rel="stylesheet" href="__CSS__/simplemde.min.css">
     <link rel="stylesheet" href="__CSS__/webui-popover.css">
     <link rel="stylesheet" href="__STATIC__/layui/css/layui.css">
     <link rel="stylesheet" href="__CSS__/mdui.min.css">
