--- a/template/view/default/footer.html
+++ b/template/view/default/footer.html
@@ -7,7 +7,7 @@
 <script src="__JS__/mltree-function.js"></script>
 <script>
     //返回顶部
-    mdui.mutation() 
+    mdui.mutation()
     $("#fixbar-top").click(function () {
         console.log('OK');
         $('body,html').animate({ scrollTop: 0 }, 1000);
@@ -22,4 +22,6 @@
         delUrl: '{:url("api/api/delMessage",["uid"=>session("uid")])}',
     }
 </script>
+<script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/highlight.js/latest/styles/github.min.css">
 <script src="__JS__/mltree-message.js"></script>
