--- a/template/view/default/footer.html
+++ b/template/view/default/footer.html
@@ -22,6 +22,5 @@
         delUrl: '{:url("api/api/delMessage",["uid"=>session("uid")])}',
     }
 </script>
-<script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/highlight.js/latest/styles/github.min.css">
 <script src="__JS__/mltree-message.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
